--- a/src/_simon_buttons.scss
+++ b/src/_simon_buttons.scss
@@ -3,9 +3,12 @@
   height: 100px;
   //width: 100px;
   h3 {
-    background-color: white;
-    color: black;
+    background-color: orange;
+    color: blue;
+    border-radius: 90%;
     display: inline-block;
+    width: 4em;
+    height: 2em;
   }
 }
 
