--- a/src/index.pug
+++ b/src/index.pug
@@ -30,9 +30,21 @@ html
         div.col-auto.score_board#start_stop(align="center")
           h3 Start/Stop
     footer
+      div.container-fluid
+        div.row.justify-content-center
+          div.col
+            p.
+              Made in response to
+              FreeCodeCamp.com<i class='fab fa-free-code-camp'></i> by Junke.
+              Feel free to send ETH 0x331EEB850A594C43DD5bCf194B3af1D2550086Da
+              <i class='fab fa-ethereum'></i>
+          div.col(align='center')
+            h4 2018
+              i.far.fa-copyright
       | <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       | <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       | <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       | <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      | <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
       link(href='index.css', rel='stylesheet')
       script(src='index.js', type='text/javascript')
