--- a/src/index.pug
+++ b/src/index.pug
@@ -10,13 +10,17 @@ html
       div.row.no-gutters.justify-content-center
         div.col.simon_buttons#simon_button_zero(align="center")
           h3 zero
+          audio(src='https://s3.amazonaws.com/freecodecamp/simonSound1.mp3')
         div.col.simon_buttons#simon_button_one(align="center")
           h3 one
+          audio(src='https://s3.amazonaws.com/freecodecamp/simonSound2.mp3')
       div.row.no-gutters.justify-content-center
         div.col.simon_buttons#simon_button_two(align="center")
           h3 two
+          audio(src='https://s3.amazonaws.com/freecodecamp/simonSound3.mp3')
         div.col.simon_buttons#simon_button_three(align="center")
           h3 three
+          audio(src='https://s3.amazonaws.com/freecodecamp/simonSound4.mp3')
       div.row.justify-content-center
         div.col.score_board#current_score_label(align="center")
           h3 Score
@@ -29,6 +33,9 @@ html
       div.row.justify-content-center
         div.col-auto.score_board#start_stop(align="center")
           h3 Start/Stop
+        div.col-auto.offset-2.score_board#strict_mode_selector(align="center")
+          h3 Strict <i class='fas fa-toggle-on' id='strict_mode_icon_on'></i>
+            <i class='fas fa-toggle-off' id='strict_mode_icon_off'></i>
     footer
       div.container-fluid
         div.row.justify-content-center
